--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>정안로지스틱스 | 글로벌 해운항공 포워딩</title>
+  <title>(주)정안해운항공 | 글로벌 해운항공 포워딩</title>
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -43,7 +43,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: #f5f5f7;
+      background: url('https://images.unsplash.com/photo-1585128902555-1e6d94b8d9b4?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
@@ -89,25 +89,27 @@
 </head>
 <body>
   <header>
-    <h1>정안로지스틱스</h1>
-    <p>글로벌 해운항공 포워딩 전문 기업</p>
+    <h1>(주)정안해운항공</h1>
+    <p>글로벌 해운항공 포워딩 전문 기업<br><strong>산업 분야: 물류 · 운송 · 배송</strong></p>
   </header>
   <nav>
     <a href="#about">회사소개</a>
     <a href="#services">서비스</a>
     <a href="#contact">문의하기</a>
   </nav>
-  <div class="hero">
-    <h1>고객 중심의 스마트 물류 파트너</h1>
-  </div>
-  <section id="about">
-    <h2>회사소개</h2>
-    <p>
-      정안로지스틱스는 글로벌 네트워크를 기반으로 한 해운 및 항공 운송 전문 기업입니다. 고객의 니즈에 맞춘 맞춤형 물류 서비스를 통해 비용 효율성과 운송 안정성을 동시에 제공합니다.
-    </p>
+  <div class="hero" style="position: relative; z-index: 0; overflow: hidden;">
+  <div style="position:absolute; inset:0; background: rgba(255,255,255,0.5); z-index:1;"></div>
+  <h1 style="position: relative; z-index: 2;">고객 중심의 스마트 물류 파트너</h1>
+</div>
+  
+    
+    
+    <p><strong>사업자등록번호:</strong> 119-86-33395</p>
+    <p><strong>주선인 부호:</strong> JASA</p>
   </section>
   <section id="services">
     <h2>주요 서비스</h2>
+    <p><strong>특화 서비스:</strong> 컨테이너(FCL) 운송</p>
     <ul>
       <li>국제 해상운송 (FCL / LCL)</li>
       <li>국제 항공운송</li>
@@ -116,14 +118,11 @@
       <li>3PL 및 SCM 솔루션</li>
     </ul>
   </section>
-  <section id="contact">
-    <h2>문의하기</h2>
-    <p>이메일: contact@jeonganlogi.com</p>
-    <p>전화: 02-1234-5678</p>
-    <p>주소: 서울특별시 중구 무역로 21</p>
-  </section>
-  <footer>
-    &copy; 2025 정안로지스틱스. All rights reserved.
-  </footer>
-</body>
-</html>
+  <h2>물류비 견적 문의하기</h2>
+  <p>이메일: jpkim@jeongansna.com</p>
+  <p>전화: 02-837-2311</p>
+  <p>팩스: 02-837-2314</p>
+  <p>주소: 서울 금천구 가산디지털2로 14, 213호</p>
+  <div style="margin-top: 2rem">
+    <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"></iframe>
+  </div>
