--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: url('https://images.unsplash.com/photo-1585128902555-1e6d94b8d9b4?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      background: url('https://images.unsplash.com/photo-1601852402224-e0eabf302f62?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
@@ -89,8 +89,11 @@
 </head>
 <body>
   <header>
+    <div style="font-size: 1.2rem; font-weight: 700; letter-spacing: 1px; color: #0071e3; margin-bottom: 0.5rem;">
+      JASA | JEONGAN SEA &amp; AIR CO., LTD
+    </div>
     <h1>(주)정안해운항공</h1>
-    <p>글로벌 해운항공 포워딩 전문 기업<br><strong>산업 분야: 물류 · 운송 · 배송</strong></p>
+    <p>글로벌 해운항공 포워딩 전문 기업</p>
   </header>
   <nav>
     <a href="#about">회사소개</a>
@@ -105,7 +108,8 @@
     
     
     <p><strong>사업자등록번호:</strong> 119-86-33395</p>
-    <p><strong>주선인 부호:</strong> JASA</p>
+    <p><strong>산업 분야:</strong> 물류 · 운송 · 배송</p>
+    
   </section>
   <section id="services">
     <h2>주요 서비스</h2>
