--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
       line-height: 1.6;
     }
     header {
-      background: url('https://source.unsplash.com/1600x900/?container,logistics') center/cover no-repeat;
-      padding: 2.5rem 1rem 1rem;
-      color: white;
-      text-align: center;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
     }
     header h1 {
       font-size: 2.8rem;
@@ -43,7 +38,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: url('https://source.unsplash.com/1600x900/?freight,logistics') center/cover no-repeat;
+      background: url('https://images.unsplash.com/photo-1612163295560-d8313702fd3d?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
