--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: url('https://images.unsplash.com/photo-1612163295560-d8313702fd3d?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      background: url('https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
@@ -95,12 +95,10 @@
   </style>
 </head>
 <body>
-  <header>
-    <div style="font-size: 1.2rem; font-weight: 700; letter-spacing: 1px; color: #ffffff; margin-bottom: 0.5rem;">
-      JASA | JEONGAN SEA &amp; AIR CO., LTD
-    </div>
-    <h1>(주)정안해운항공</h1>
-    <p>글로벌 해운항공 포워딩 전문 기업</p>
+  <header style="text-align: center; padding: 2rem 1rem;">
+  <div style="font-size: 1rem; font-weight: 600; letter-spacing: 1.2px; color: #0071e3; text-transform: uppercase;">JASA | JEONGAN SEA &amp; AIR CO., LTD</div>
+  <h1 style="font-size: 3rem; font-weight: 700; color: #1d1d1f; margin-top: 0.5rem; letter-spacing: -0.03em;">(주)정안해운항공</h1>
+  <p style="font-size: 1.2rem; color: #6e6e73; margin-top: 0.25rem;">글로벌 해운항공 포워딩 전문 기업</p>
   </header>
   <nav>
     <a href="#about">회사소개</a>
