--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </style>
 </head>
 <body>
-  <header style="text-align: center; padding: 2rem 1rem;">
+  <header style="text-align: center; padding: 2rem 1rem; display: flex; flex-direction: column; align-items: center;">
   <div style="font-size: 1rem; font-weight: 600; letter-spacing: 1.2px; color: #0071e3; text-transform: uppercase;">JASA | JEONGAN SEA &amp; AIR CO., LTD</div>
   <h1 style="font-size: 3rem; font-weight: 700; color: #1d1d1f; margin-top: 0.5rem; letter-spacing: -0.03em;">(주)정안해운항공</h1>
   <p style="font-size: 1.2rem; color: #6e6e73; margin-top: 0.25rem;">글로벌 해운항공 포워딩 전문 기업</p>
@@ -110,7 +110,11 @@
   </div>
   <section id="about">
     <h2>회사소개</h2>
-    <p>(주)정안해운항공은 글로벌 네트워크를 기반으로 한 해운 및 항공 운송 전문 기업입니다. 고객의 니즈에 맞춘 맞춤형 물류 서비스를 통해 비용 효율성과 운송 안정성을 동시에 제공합니다.</p>
+    <p style="font-size: 1.2rem; color: #1d1d1f; font-weight: 400; line-height: 1.8;">
+      (주)정안해운항공은 글로벌 물류 네트워크와 스마트 운송 솔루션을 통해,
+      고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고
+      전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.
+    </p>
     <p><strong>산업 분야:</strong> 물류 · 운송 · 배송</p>
     <p><strong>설립일:</strong> 2010.09.13</p>
     <p><strong>대표자:</strong> 김종필</p>
