--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
       고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고
       전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.
     </p>
-    <p><strong>산업 분야:</strong> 물류 · 운송 · 배송</p>
-    <p><strong>설립일:</strong> 2010.09.13</p>
-    <p><strong>대표자:</strong> 김종필</p>
-    <p><strong>사업자등록번호:</strong> 119-86-33395</p>
-    <p><strong>주선인 부호:</strong> JASA</p>
+    
   </section>
   <section id="services">
     <h2>주요 서비스</h2>
@@ -137,13 +133,21 @@
     <p>이메일: jpkim@jeongansna.com</p>
     <p>전화: 02-837-2311</p>
     <p>팩스: 02-837-2314</p>
-    <p>주소: 서울 금천구 가산디지털2로 14, 213호</p>
     <div style="margin-top: 2rem">
       <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"></iframe>
     </div>
   </section>
   <footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
-  </footer>
+  $1
+  <p><strong>주소:</strong> 서울 금천구 가산디지털2로 14, 213호</p>
+  <p><strong>산업 분야:</strong> 물류 · 운송 · 배송</p>
+  <p><strong>설립일:</strong> 2010.09.13</p>
+  <p><strong>대표자:</strong> 김종필</p>
+  <p><strong>사업자등록번호:</strong> 119-86-33395</p>
+  <p><strong>주선인 부호:</strong> JASA</p>
+</section>
+
+</footer>
 </body>
 </html>
