--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 </head>
 <body>
   <header style="text-align: center; padding: 2rem 1rem; display: flex; flex-direction: column; align-items: center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Shipping_icon.svg/120px-Shipping_icon.svg.png" alt="JEONGAN SEA & AIR 로고" style="width: 80px; height: auto; margin-bottom: 1rem;">
   <div style="font-size: 1rem; font-weight: 600; letter-spacing: 1.2px; color: #0071e3; text-transform: uppercase;">JASA | JEONGAN SEA &amp; AIR CO., LTD</div>
   <h1 style="font-size: 3rem; font-weight: 700; color: #1d1d1f; margin-top: 0.5rem; letter-spacing: -0.03em;">(주)정안해운항공</h1>
   <p style="font-size: 1.2rem; color: #6e6e73; margin-top: 0.25rem;">글로벌 해운항공 포워딩 전문 기업</p>
