--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: url('https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      background: url('/mnt/data/fef305b0-989c-4f65-bb11-7d23332fa44c.jpg') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
@@ -54,7 +54,7 @@
       content: '';
       position: absolute;
       inset: 0;
-      background: rgba(255,255,255,0.5);
+      background: rgba(0,0,0,0.4);
       z-index: 1;
     }
     .hero h1 {
@@ -62,7 +62,7 @@
       z-index: 2;
       font-size: 2.4rem;
       font-weight: 600;
-      color: #1d1d1f;
+      color: #ffffff;
     }
     section {
       padding: 4rem 2rem;
