--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       gap: 2rem;
       background: #ffffff;
       padding: 1rem 0;
-      border-bottom: 1px solid #e5e5e5;
+      border-bottom: 1px solid #e5e5e
+      
     }
     nav a {
       text-decoration: none;
@@ -38,7 +39,7 @@
       font-size: 1rem;
     }
     .hero {
-      background: url('/mnt/data/fef305b0-989c-4f65-bb11-7d23332fa44c.jpg') center/cover no-repeat;
+      background: url('https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
       height: 60vh;
       display: flex;
       flex-direction: column;
@@ -100,10 +101,11 @@
   <h1 style="font-size: 3rem; font-weight: 700; color: #1d1d1f; margin-top: 0.5rem; letter-spacing: -0.03em;">(주)정안해운항공</h1>
   <p style="font-size: 1.2rem; color: #6e6e73; margin-top: 0.25rem;">글로벌 해운항공 포워딩 전문 기업</p>
   </header>
-  <nav>
-    <a href="#about">회사소개</a>
-    <a href="#services">서비스</a>
-    <a href="#contact">문의하기</a>
+  <a href="#about">회사소개</a>
+<a href="#services">서비스</a>
+<a href="#clients">고객사</a>
+<a href="#contact">문의하기</a>
+<a href="#location">위치</a>
   </nav>
   <div class="hero">
     <h1>고객 중심의 스마트 물류 파트너</h1>
@@ -116,8 +118,18 @@
       전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.
     </p>
     
+  <section id="clients">
+    <h2>고객사</h2>
+    <p>정안해운항공은 다양한 산업군의 고객사와 함께하며, 신뢰를 기반으로 장기적인 파트너십을 유지하고 있습니다.</p>
+    <ul>
+      <li>대형 제조기업</li>
+      <li>글로벌 유통사</li>
+      <li>IT 및 전자기업</li>
+      <li>중소 수출입업체</li>
+    </ul>
   </section>
-  <section id="services">
+
+
     <h2>주요 서비스</h2>
     <p><strong>특화 서비스:</strong> 컨테이너(FCL) 운송</p>
     <ul>
@@ -129,15 +141,23 @@
     </ul>
   </section>
   <section id="contact">
-    <h2>물류비 견적 문의하기</h2>
+    <h2>문의하기</h2>
     <p>이메일: jpkim@jeongansna.com</p>
     <p>전화: 02-837-2311</p>
     <p>팩스: 02-837-2314</p>
     <div style="margin-top: 2rem">
       <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"></iframe>
     </div>
+  $1
+  <section id="location">
+    <h2>위치</h2>
+    <p>서울 금천구 가산디지털2로 14, 213호</p>
+    <div style="margin-top: 2rem">
+      <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"></iframe>
+    </div>
   </section>
-  <footer>
+
+<footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
   $1
   <p><strong>주소:</strong> 서울 금천구 가산디지털2로 14, 213호</p>
