--- a/index.html
+++ b/index.html
@@ -168,9 +168,14 @@
     <h2>고객사</h2>
     <div style="display: flex; gap: 2rem; align-items: center; flex-wrap: wrap;">
       <div style="text-align: center;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/CJ_Logistics_logo.svg" alt="CJ로고" style="width: 100px; height: auto;"/>
+        <img src="https://cdn.cjlogistics.com/assets/images/common/logo.png" alt="CJ로고" style="width: 100px; height: auto;"/>
         <p>CJ</p>
       </div>
+      <div style="text-align: center;">
+        <img src="https://www.samhae.com/kor/img/logo.gif" alt="삼해상사 로고" style="width: 100px; height: auto; background: white; padding: 0.5rem;"/>
+        <p>삼해상사</p>
+      </div>
+    </div>
       <div style="text-align: center;">
         <img src="https://www.samhae.com/kor/img/common/logo.png" alt="삼해상사 로고" style="width: 100px; height: auto; background: white; padding: 0.5rem;"/>
         <p>삼해상사</p>
@@ -181,9 +186,9 @@
 
   <section id="contact">
     <h2>문의하기</h2>
-    <p>이메일: jpkim@jeongansna.com</p>
-    <p>전화: 02-837-2311</p>
-    <p>팩스: 02-837-2314</p>
+    <p>이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a></p>
+    <p>전화: <a href="tel:028372311">02-837-2311</a></p>
+    <p>팩스: <span onclick="navigator.clipboard.writeText('028372314'); alert('팩스번호가 복사되었습니다.');" style="cursor:pointer; text-decoration:underline; color:#0071e3;">02-837-2314 (복사)</span></p>
   </section>
 
   <section id="location">
