--- a/index.html
+++ b/index.html
@@ -140,12 +140,9 @@
     <a href="#location">위치</a>
   </nav>
 
-  <div class="hero">
-    <video autoplay muted loop playsinline>
-      <source src="https://assets.mixkit.co/videos/preview/mixkit-cargo-containers-on-a-ship-1227-large.mp4" type="video/mp4">
-    </video>
-    <h1>$1</h1>
-  </div>
+  <div class="hero" style="background: url('https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat; height: 60vh; display: flex; align-items: center; justify-content: center;">
+  <h1 style="color: #fff; font-size: 2.4rem; font-weight: 600; text-align: center; text-shadow: 0 0 10px rgba(0,0,0,0.5);">고객 중심의 스마트 물류 파트너</h1>
+</div>
 
   <section id="about">
     <h2>회사소개</h2>
@@ -165,24 +162,14 @@
   </section>
 
   <section id="clients">
-    <h2>고객사</h2>
-    <div style="display: flex; gap: 2rem; align-items: center; flex-wrap: wrap;">
-      <div style="text-align: center;">
-        <img src="https://cdn.cjlogistics.com/assets/images/common/logo.png" alt="CJ로고" style="width: 100px; height: auto;"/>
-        <p>CJ</p>
-      </div>
-      <div style="text-align: center;">
-        <img src="https://www.samhae.com/kor/img/logo.gif" alt="삼해상사 로고" style="width: 100px; height: auto; background: white; padding: 0.5rem;"/>
-        <p>삼해상사</p>
-      </div>
-    </div>
-      <div style="text-align: center;">
-        <img src="https://www.samhae.com/kor/img/common/logo.png" alt="삼해상사 로고" style="width: 100px; height: auto; background: white; padding: 0.5rem;"/>
-        <p>삼해상사</p>
-      </div>
-    </div>
-    <ul>$1</ul>
-  </section>
+  <h2>고객사</h2>
+  <ul>
+    <li>대형 제조기업</li>
+    <li>글로벌 유통사</li>
+    <li>IT 및 전자기업</li>
+    <li>중소 수출입업체</li>
+  </ul>
+</section>
 
   <section id="contact">
     <h2>문의하기</h2>
