--- a/index.html
+++ b/index.html
@@ -145,9 +145,19 @@
 </div>
 
   <section id="about">
-    <h2>회사소개</h2>
-    <p>(주)정안해운항공은 글로벌 물류 네트워크와 스마트 운송 솔루션을 통해 고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고 전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.</p>
-  </section>
+  <h2>회사소개</h2>
+  <p>(주)정안해운항공은 글로벌 물류 네트워크와 스마트 운송 솔루션을 통해 고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고 전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.</p>
+  <br />
+  <h3 style="margin-top: 2rem; font-size: 1.2rem; color: #1d1d1f;">회사 연혁</h3>
+  <ul style="margin-top: 1rem;">
+    <li><strong>2010.09</strong> (주)정안해운항공 설립</li>
+    <li><strong>2012.03</strong> 동남아 및 미주 항공화물 운송 개시</li>
+    <li><strong>2015.07</strong> 글로벌 해운사와 FCL 계약 체결</li>
+    <li><strong>2018.01</strong> 통합 물류 솔루션 시스템 구축</li>
+    <li><strong>2020.06</strong> 국내외 물류거점 5개소 운영</li>
+    <li><strong>2023.11</strong> 고객 맞춤형 SCM 서비스 확대</li>
+  </ul>
+</section>
 
   <section id="services">
     <h2>서비스</h2>
