--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 </div>
 
   <section id="about">
+  <img src="https://img.icons8.com/ios-filled/100/0071e3/company.png" alt="회사 소개 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
   <h2>회사소개</h2>
   <p>(주)정안해운항공은 글로벌 물류 네트워크와 스마트 운송 솔루션을 통해 고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고 전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.</p>
   <br />
@@ -160,6 +161,7 @@
 </section>
 
   <section id="services">
+  <img src="https://img.icons8.com/ios-filled/100/0071e3/container-truck.png" alt="컨테이너 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
     <h2>서비스</h2>
     <p><strong>특화 서비스:</strong> 컨테이너(FCL) 운송</p>
     <ul>
@@ -182,6 +184,7 @@
 </section>
 
   <section id="contact">
+  <img src="https://img.icons8.com/ios-filled/100/0071e3/phone.png" alt="문의하기 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
     <h2>문의하기</h2>
     <p>이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a></p>
     <p>전화: <a href="tel:028372311">02-837-2311</a></p>
@@ -189,6 +192,7 @@
   </section>
 
   <section id="location">
+  <img src="https://img.icons8.com/ios-filled/100/0071e3/marker.png" alt="위치 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
     <h2>위치</h2>
     <p>서울 금천구 가산디지털2로 14, 213호</p>
     <div style="margin-top: 2rem">
