--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: #ffffff;
+      background: linear-gradient(to bottom, #f5f7fa, #ffffff);
       color: #1d1d1f;
       line-height: 1.6;
-    }
     header {
       text-align: center;
       padding: 2rem 1rem;
