--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <header style="text-align: center;">
     <div class="sub">JASA | JEONGAN SEA &amp; AIR CO., LTD</div>
     <h1>(주)정안해운항공</h1>
     <p class="desc">글로벌 해운항공 포워딩 전문 기업</p>
