--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>(주)정안해운항공 | 글로벌 해운항공 포워딩</title>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -12,205 +12,187 @@
       padding: 0;
     }
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background: linear-gradient(to bottom, #f0f2f5, #ffffff);
-      color: #1d1d1f;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+      background: #f9f9f9;
+      color: #1f1f1f;
       line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-    header h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #1d1d1f;
-      margin-top: 0.5rem;
-      letter-spacing: -0.03em;
-    }
-    header .sub {
-      font-size: 1rem;
-      font-weight: 600;
-      letter-spacing: 1.2px;
-      color: #0071e3;
-      text-transform: uppercase;
-    }
-    header .desc {
-      font-size: 1.2rem;
-      color: #6e6e73;
-      margin-top: 0.25rem;
     }
     nav {
       display: flex;
-      justify-content: center;
-      gap: 2rem;
-      background: #ffffff;
-      padding: 1rem 0;
-      border-bottom: 1px solid #e5e5e5;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: #ffffff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    nav .logo {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #0071e3;
     }
     nav a {
+      margin-left: 2rem;
       text-decoration: none;
-      color: #0071e3;
+      color: #1f1f1f;
       font-weight: 500;
-      font-size: 1rem;
+      transition: color 0.2s;
+    }
+    nav a:hover {
+      color: #0071e3;
     }
     .hero {
-      position: relative;
-      height: 60vh;
-      overflow: hidden;
-    }
-
-    .hero video {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      min-width: 100%;
-      min-height: 100%;
-      width: auto;
-      height: auto;
-      z-index: 0;
-      transform: translate(-50%, -50%);
-      object-fit: cover;
-      opacity: 0.7;
-    }
-
-    .hero h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 2.4rem;
-      font-weight: 600;
-      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: url('https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      height: 80vh;
+      color: #fff;
       text-align: center;
-    }
-    .hero::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.4);
+      padding: 0 2rem;
     }
     .hero h1 {
-      position: relative;
-      z-index: 1;
-      font-size: 2.4rem;
-      font-weight: 600;
-      color: #ffffff;
+      font-size: 3rem;
+      font-weight: 700;
+      text-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    .hero p {
+      font-size: 1.25rem;
+      margin-top: 1rem;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
     section {
-      padding: 4rem 2rem;
-      max-width: 900px;
-      margin: auto;
+      max-width: 1000px;
+      margin: 4rem auto;
+      padding: 0 2rem;
     }
     section h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      color: #1d1d1f;
-      font-weight: 700;
-      letter-spacing: -0.02em;
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      color: #0071e3;
+    }
+    section p, section ul {
+      font-size: 1rem;
+      color: #333;
     }
     section ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    section ul li::before {
-      content: '\2022';
-      margin-right: 0.6rem;
-      color: #0071e3;
-      font-size: 1.2rem;
-      vertical-align: middle;
+      list-style: disc;
+      padding-left: 1.5rem;
     }
     footer {
-      background: #f5f5f7;
-      color: #6e6e73;
+      background: #202124;
+      color: #ccc;
       text-align: center;
       padding: 2rem;
       font-size: 0.9rem;
     }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
   </style>
 </head>
 <body>
-  <header style="text-align: center;">
-    <div class="sub">JASA | JEONGAN SEA &amp; AIR CO., LTD</div>
-    <h1>(주)정안해운항공</h1>
-    <p class="desc">글로벌 해운항공 포워딩 전문 기업</p>
-  </header>
+  <nav>
+    <div class="logo">정안해운항공</div>
+    <div>
+      <a href="#home">홈</a>
+      <a href="#about">회사소개</a>
+      <a href="#services">서비스</a>
+      <a href="#clients">고객사</a>
+      <a href="#contact">문의하기</a>
+      <a href="#location">위치</a>
+    </div>
+  </nav>
 
-  <nav style="display: flex; justify-content: center; gap: 2rem; background: #ffffffcc; padding: 1rem 0; border-bottom: 1px solid #e5e5e5; position: sticky; top: 0; backdrop-filter: blur(10px); z-index: 10;">
-  <a href="#about" style="text-decoration: none; color: #0071e3; font-weight: 500; font-size: 1rem;">회사소개</a>
-  <a href="#services" style="text-decoration: none; color: #0071e3; font-weight: 500; font-size: 1rem;">서비스</a>
-  <a href="#clients" style="text-decoration: none; color: #0071e3; font-weight: 500; font-size: 1rem;">고객사</a>
-  <a href="#contact" style="text-decoration: none; color: #0071e3; font-weight: 500; font-size: 1rem;">문의하기</a>
-  <a href="#location" style="text-decoration: none; color: #0071e3; font-weight: 500; font-size: 1rem;">위치</a>
-</nav>
-
-  <div class="hero" style="background: url('https://images.unsplash.com/photo-1585128792020-94f6f7c6c134?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat; height: 60vh; display: flex; align-items: center; justify-content: center;">
-  <h1 style="color: #fff; font-size: 2.8rem; font-weight: 700; text-align: center; letter-spacing: -0.03em; text-shadow: 0 0 10px rgba(0,0,0,0.4);">고객 중심의 스마트 물류 파트너</h1>
-</div>
+  <div class="hero" id="home">
+    <h1>글로벌 해운항공 포워딩 전문 기업</h1>
+    <p>고객 중심의 스마트 물류 파트너</p>
+  </div>
 
   <section id="about">
-  <img src="https://img.icons8.com/ios-filled/100/0071e3/company.png" alt="회사 소개 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
-  <h2>회사소개</h2>
-  <p>(주)정안해운항공은 글로벌 물류 네트워크와 스마트 운송 솔루션을 통해 고객 맞춤형 해운 및 항공 서비스를 제공합니다. 효율성과 안정성, 그리고 전문성을 바탕으로 더 빠르고 유연한 물류 경험을 만들어 갑니다.</p>
-  <br />
-  <h3 style="margin-top: 2rem; font-size: 1.2rem; color: #1d1d1f;">회사 연혁</h3>
-  <ul style="margin-top: 1rem;">
-    <li><strong>2010.09</strong> (주)정안해운항공 설립</li>
-    <li><strong>2012.03</strong> 동남아 및 미주 항공화물 운송 개시</li>
-    <li><strong>2015.07</strong> 글로벌 해운사와 FCL 계약 체결</li>
-    <li><strong>2018.01</strong> 통합 물류 솔루션 시스템 구축</li>
-    <li><strong>2020.06</strong> 국내외 물류거점 5개소 운영</li>
-    <li><strong>2023.11</strong> 고객 맞춤형 SCM 서비스 확대</li>
-  </ul>
-  
-</section>
+    <h2>회사소개</h2>
+    <p>(주)정안해운항공은 글로벌 네트워크를 기반으로 한 해운 및 항공 운송 전문 기업입니다. 고객의 니즈에 맞춘 맞춤형 물류 서비스를 통해 비용 효율성과 운송 안정성을 동시에 제공합니다.</p>
+    <div class="grid">
+      <div>
+        <h3>설립일</h3>
+        <p>2010.09.13</p>
+      </div>
+      <div>
+        <h3>대표자</h3>
+        <p>김종필</p>
+      </div>
+      <div>
+        <h3>산업 분야</h3>
+        <p>물류 · 운송 · 배송</p>
+      </div>
+      <div>
+        <h3>사업자등록번호</h3>
+        <p>119-86-33395</p>
+      </div>
+      <div>
+        <h3>주선인 부호</h3>
+        <p>JASA</p>
+      </div>
+    </div>
+  </section>
 
   <section id="services">
-  <img src="https://img.icons8.com/ios-filled/100/0071e3/container-truck.png" alt="컨테이너 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
-    <h2>서비스</h2>
-    <p><strong>특화 서비스:</strong> 컨테이너(FCL) 운송</p>
+  <h2>서비스</h2>
+  <div class="grid">
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f6a2.svg" alt="선박 아이콘" width="40" height="40" />
+      <p>국제 해상운송 (FCL / LCL)</p>
+    </div>
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/2708.svg" alt="비행기 아이콘" width="40" height="40" />
+      <p>국제 항공운송</p>
+    </div>
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f6d2.svg" alt="카트 아이콘" width="40" height="40" />
+      <p>수출입 통관 서비스</p>
+    </div>
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f4e6.svg" alt="박스 아이콘" width="40" height="40" />
+      <p>보세창고 및 일반창고 운영</p>
+    </div>
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f310.svg" alt="지구 아이콘" width="40" height="40" />
+      <p>3PL 및 SCM 솔루션</p>
+    </div>
+  </div>
+</section>
+
+  <section id="clients">
+    <h2>고객사</h2>
     <ul>
-      <li>국제 해상운송 (FCL / LCL)</li>
-      <li>국제 항공운송</li>
-      <li>수출입 통관 서비스</li>
-      <li>보세창고 및 일반창고 운영</li>
-      <li>3PL 및 SCM 솔루션</li>
+      <li>CJ대한통운</li>
+      <li>삼해상사</li>
+      <li>다수의 중견 제조사 및 수출입기업</li>
     </ul>
   </section>
 
-  <section id="clients">
-  <h2>고객사</h2>
-  <ul>
-    <li>대형 제조기업</li>
-    <li>글로벌 유통사</li>
-    <li>IT 및 전자기업</li>
-    <li>중소 수출입업체</li>
-  </ul>
-</section>
-
   <section id="contact">
-  <img src="https://img.icons8.com/ios-filled/100/0071e3/phone.png" alt="문의하기 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
     <h2>문의하기</h2>
     <p>이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a></p>
     <p>전화: <a href="tel:028372311">02-837-2311</a></p>
-    <p>팩스: <span onclick="navigator.clipboard.writeText('028372314'); alert('팩스번호가 복사되었습니다.');" style="cursor:pointer; text-decoration:underline; color:#0071e3;">02-837-2314 (복사)</span></p>
+    <p>팩스: 02-837-2314</p>
   </section>
 
   <section id="location">
-  <img src="https://img.icons8.com/ios-filled/100/0071e3/marker.png" alt="위치 아이콘" style="width: 50px; height: 50px; margin-bottom: 1rem;" />
     <h2>위치</h2>
     <p>서울 금천구 가산디지털2로 14, 213호</p>
-    <div style="margin-top: 2rem">
-      <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0;" allowfullscreen loading="lazy"></iframe>
-    </div>
+    <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0; margin-top: 1rem;" allowfullscreen loading="lazy"></iframe>
   </section>
 
   <footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
-    <p><strong>주소:</strong> 서울 금천구 가산디지털2로 14, 213호</p>
-    <p><strong>산업 분야:</strong> 물류 · 운송 · 배송</p>
-    <p><strong>설립일:</strong> 2010.09.13</p>
-    <p><strong>대표자:</strong> 김종필</p>
-    <p><strong>사업자등록번호:</strong> 119-86-33395</p>
-    <p><strong>주선인 부호:</strong> JASA</p>
   </footer>
 </body>
 </html>
