--- a/index.html
+++ b/index.html
@@ -97,6 +97,27 @@
       margin-top: 2rem;
     }
   </style>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const hero = document.querySelector(".hero");
+    const images = [
+      'https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80',
+      'https://images.unsplash.com/photo-1506784365847-bbad939e9335?auto=format&fit=crop&w=1600&q=80',
+      'https://images.unsplash.com/photo-1517256064527-09c73fc73e90?auto=format&fit=crop&w=1600&q=80'
+    ];
+    let currentImage = 0;
+
+    window.addEventListener('scroll', () => {
+      const scrollY = window.scrollY;
+      const windowHeight = window.innerHeight;
+      const index = Math.min(images.length - 1, Math.floor(scrollY / windowHeight));
+      if (index !== currentImage) {
+        hero.style.backgroundImage = `url('${images[index]}')`;
+        currentImage = index;
+      }
+    });
+  });
+</script>
 </head>
 <body>
   <nav>
