--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     }
   </style>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("DOMContentLoaded", function () {
     const hero = document.querySelector(".hero");
     const images = [
       'https://images.unsplash.com/photo-1557683304-673a23048d34?auto=format&fit=crop&w=1600&q=80',
@@ -107,12 +107,21 @@
     ];
     let currentImage = 0;
 
-    window.addEventListener('scroll', () => {
+    const fadeTransition = (imgUrl) => {
+      hero.style.transition = 'background-image 1s ease-in-out';
+      hero.style.opacity = 0;
+      setTimeout(() => {
+        hero.style.backgroundImage = `url('${imgUrl}')`;
+        hero.style.opacity = 1;
+      }, 300);
+    };
+
+    window.addEventListener("scroll", () => {
       const scrollY = window.scrollY;
       const windowHeight = window.innerHeight;
       const index = Math.min(images.length - 1, Math.floor(scrollY / windowHeight));
       if (index !== currentImage) {
-        hero.style.backgroundImage = `url('${images[index]}')`;
+        fadeTransition(images[index]);
         currentImage = index;
       }
     });
