--- a/index.html
+++ b/index.html
@@ -96,36 +96,52 @@
       gap: 2rem;
       margin-top: 2rem;
     }
+      .slider-dots {
+      position: absolute;
+      bottom: 20px;
+      display: flex;
+      gap: 10px;
+    }
+    .slider-dots .dot {
+      font-size: 2rem;
+      cursor: pointer;
+      color: #ccc;
+    }
+    .slider-dots .dot.active {
+      color: #fff;
+    }
   </style>
 <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const hero = document.querySelector(".hero");
-    const images = [
-  'https://images.unsplash.com/photo-1585128792020-94f6f7c6c134?auto=format&fit=crop&w=1600&q=80',
-  'https://images.unsplash.com/photo-1618005198919-d3d4b5c1dbd1?auto=format&fit=crop&w=1600&q=80',
-  'https://images.unsplash.com/photo-1504615755583-2916b52192d7?auto=format&fit=crop&w=1600&q=80'
-];
-    let currentImage = 0;
+document.addEventListener("DOMContentLoaded", function () {
+  const hero = document.querySelector(".hero");
+  const images = [
+    'https://images.unsplash.com/photo-1626338913102-5f5f35fc32aa?auto=format&fit=crop&w=1600&q=80',
+    'https://images.unsplash.com/photo-1615719413546-fb5c2521e575?auto=format&fit=crop&w=1600&q=80',
+    'https://images.unsplash.com/photo-1600774237160-8f6a41d9c367?auto=format&fit=crop&w=1600&q=80'
+  ];
+  let currentImage = 0;
 
-    const fadeTransition = (imgUrl) => {
-      hero.style.transition = 'background-image 1s ease-in-out';
-      hero.style.opacity = 0;
-      setTimeout(() => {
-        hero.style.backgroundImage = `url('${imgUrl}')`;
-        hero.style.opacity = 1;
-      }, 300);
-    };
+  const cycleImages = () => {
+    hero.style.transition = 'background-image 1s ease-in-out';
+    hero.style.backgroundImage = `url('${images[currentImage]}')`;
+    currentImage = (currentImage + 1) % images.length;
+  };
 
-    window.addEventListener("scroll", () => {
-      const scrollY = window.scrollY;
-      const windowHeight = window.innerHeight;
-      const index = Math.min(images.length - 1, Math.floor(scrollY / windowHeight));
-      if (index !== currentImage) {
-        fadeTransition(images[index]);
-        currentImage = index;
-      }
-    });
-  });
+  const dots = document.querySelectorAll('.dot');
+  function updateDots(index) {
+    dots.forEach(dot => dot.classList.remove('active'));
+    dots[index].classList.add('active');
+  }
+  const startSlider = () => {
+    cycleImages();
+    updateDots(currentImage);
+    setInterval(() => {
+      cycleImages();
+      updateDots(currentImage);
+    }, 3000);
+  };
+  startSlider();
+});
 </script>
 </head>
 <body>
@@ -142,9 +158,14 @@
   </nav>
 
   <div class="hero" id="home">
-    <h1>글로벌 해운항공 포워딩 전문 기업</h1>
-    <p>고객 중심의 스마트 물류 파트너</p>
+  <h1>글로벌 해운항공 포워딩 전문 기업</h1>
+  <p>고객 중심의 스마트 물류 파트너</p>
+  <div class="slider-dots">
+    <span class="dot" data-index="0">*</span>
+    <span class="dot" data-index="1">*</span>
+    <span class="dot" data-index="2">*</span>
   </div>
+</div>
 
   <section id="about">
     <h2>회사소개</h2>
