--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
       padding-top: 30vh;
       text-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     }
+      .typewriter-text {
+      overflow: hidden;
+      border-right: .15em solid #fff;
+      white-space: nowrap;
+      margin: 0 auto;
+      letter-spacing: .1em;
+      animation: typing 3s steps(40, end), blink-caret .75s step-end infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+
+    @keyframes blink-caret {
+      from, to { border-color: transparent }
+      50% { border-color: white; }
+    }
   </style>
 
 </head>
@@ -148,11 +166,11 @@
   </nav>
 
   <div class="hero-video" id="home">
-  <video autoplay muted loop playsinline>
-    <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4" />
+  <video autoplay muted loop playsinline poster="https://picsum.photos/id/1039/1600/900">
+    <source src="" type="video/mp4"
   </video>
   <div class="overlay">
-    <h1>글로벌 해운항공 포워딩 전문 기업</h1>
+    <h1 class="typewriter-text">글로벌 해운항공 포워딩 전문 기업</h1>
     <p>고객 중심의 스마트 물류 파트너</p>
   </div>
 </div>
@@ -233,8 +251,47 @@
     <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0; margin-top: 1rem;" allowfullscreen loading="lazy"></iframe>
   </section>
 
+  <section id="realtime-info">
+    <h2>실시간 정보</h2>
+    <div class="grid">
+      <div>
+        <h3>환율 정보 (USD/KRW)</h3>
+        <p id="exchange-rate">불러오는 중...</p>
+      </div>
+      <div>
+        <h3>시간 정보</h3>
+        <p>뉴욕: <span id="time-ny">--:--</span></p>
+        <p>런던: <span id="time-london">--:--</span></p>
+        <p>서울: <span id="time-seoul">--:--</span></p>
+      </div>
+    </div>
+  </section>
+
   <footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
   </footer>
+<script>
+  // 실시간 시간 정보 업데이트
+  function updateTime() {
+    const options = { hour: '2-digit', minute: '2-digit', hour12: false };
+    const now = new Date();
+    document.getElementById('time-ny').textContent = now.toLocaleTimeString('en-US', { ...options, timeZone: 'America/New_York' });
+    document.getElementById('time-london').textContent = now.toLocaleTimeString('en-GB', { ...options, timeZone: 'Europe/London' });
+    document.getElementById('time-seoul').textContent = now.toLocaleTimeString('ko-KR', { ...options, timeZone: 'Asia/Seoul' });
+  }
+  setInterval(updateTime, 1000);
+  updateTime();
+
+  // 환율 정보 (USD → KRW) API 사용
+  fetch('https://api.exchangerate.host/latest?base=USD&symbols=KRW')
+    .then(res => res.json())
+    .then(data => {
+      const rate = data.rates.KRW;
+      document.getElementById('exchange-rate').textContent = rate.toFixed(2) + ' KRW';
+    })
+    .catch(() => {
+      document.getElementById('exchange-rate').textContent = '불러올 수 없음';
+    });
+</script>
 </body>
 </html>
